# CMakeVCPKG

./: CMakeLists.txt  main.cpp
.devcontainer/: Dockerfile
